Fixed navigation breaking when aligning left or right

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -39,6 +39,7 @@
 
 .widget {
     &.extendednavigation {
+        display: table;
         margin: 2% 5%;
         width: 90%;
         @media @tablet {
